<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="http://schemas.android.com/apk/res-auto" tools:ignore="MissingTranslation">
    <string name="app_keep">Keep</string>
    <string name="app_history">History</string>
    <string name="keep_folder">Folders</string>
    <string name="keep_folder_create">New Folder</string>
    <string name="keep_folder_name">Folder Name</string>
    <string name="keep_folder_default">Default</string>
    <string name="keep_folder_delete">Delete Folder</string>
    <string name="keep_folder_delete_msg">Delete this folder and all its keeps?</string>
    <string name="keep_choose_folder">Choose Folder</string>
    <string name="keep_move_folder">Move to Folder</string>
    <string name="keep_export">Export Keeps</string>
    <string name="keep_import">Import Keeps</string>
    <string name="keep_export_success">Keeps exported</string>
    <string name="keep_import_success">Keeps imported</string>
    <string name="keep_import_fail">Import failed</string>
    <string name="keep_folder_empty">No keeps</string>
    <string name="keep_folder_count">%d movies</string>
    <string name="keep_folder_all">All %d</string>
    <string name="keep_sync">Sync Method</string>
    <string name="keep_sync_lan">LAN Sync</string>
    <string name="keep_sync_webdav">WebDAV Cloud Sync</string>
    <string name="keep_added_to">Added to “%1$s”</string>
    <string name="keep_modify">Modify Folder</string>
    <string name="keep_done">Done</string>
    <string name="keep_go_see">View</string>
    <string name="keep_choose_title">Choose Folder</string>
    <string name="keep_choose_new">New Folder</string>
    <string name="webdav_title">WebDAV Cloud Sync</string>
    <string name="webdav_connected">Connected</string>
    <string name="webdav_url_hint">Server Address</string>
    <string name="webdav_username_hint">Username</string>
    <string name="webdav_password_hint">Password</string>
    <string name="webdav_path_hint">Path (default /tv)</string>
    <string name="webdav_test">Test Connection</string>
    <string name="webdav_upload">Upload</string>
    <string name="webdav_download">Download</string>
    <string name="webdav_clear">Clear Config</string>
    <string name="webdav_url_empty">Please enter server address</string>
    <string name="webdav_username_empty">Please enter username</string>
    <string name="webdav_password_empty">Please enter password</string>
    <string name="webdav_upload_confirm_title">Confirm Upload</string>
    <string name="webdav_upload_confirm_msg">This will overwrite remote data. Continue?</string>
    <string name="webdav_download_confirm_title">Confirm Download</string>
    <string name="webdav_download_confirm_msg">This will pull remote data and overwrite local data. Continue?</string>
    <string name="webdav_clear_confirm_title">Clear Config</string>
    <string name="webdav_clear_confirm_msg">Clear WebDAV configuration?</string>
    <string name="webdav_clear_success">Config cleared</string>
    <string name="nav_vod">Vod</string>
    <string name="nav_live">Live</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_mine">Mine</string>
    <string name="tab_epg">EPG</string>
    <string name="live_channel">Channels</string>
    <string name="live_empty">No channels</string>
    <string name="live_epg_empty">No EPG</string>
    <string name="live_epg_none">No program info</string>
    <string name="epg_today">Today %1$s</string>
    <string name="live_source">Live Source</string>
    <string name="live_keep">Live Favorites</string>
    <string name="live_history">Live History</string>
    <string name="live_channel_missing">Channel not found in current live source</string>
    <string name="live_group">Categories</string>
    <string name="live_line_title">Line</string>
    <string name="live_epg_now">Now: %1$s %2$s</string>
    <string name="live_epg_next">Next: %1$s %2$s</string>
    <string name="tab_channel">Switch</string>
    <string name="live_all_epg">All Programs</string>
    <string name="live_epg_live">Live</string>
    <string name="live_epg_playing">Playing</string>
    <string name="live_epg_reserve">Reserve</string>
    <string name="live_epg_ended">Ended</string>
    <string name="live_epg_today_label">Today</string>
    <string name="live_epg_dialog_title">EPG</string>
    <string name="live_epg_reserve_toast">Calendar reminder opened, please confirm</string>
    <string name="live_epg_reserve_fail">Failed to open calendar</string>
    <string name="live_replay">Replay</string>
    <string name="live_reserved">Reserved</string>
    <string name="live_reminder_add">Reserved, will remind</string>
    <string name="live_reminder_cancel">Reservation cancelled</string>
    <string name="live_reminder">%1$s will air soon</string>
    <string name="live_reminder_permission">Notifications are disabled. Please allow them in system settings to get reminded</string>
    <string name="vod_home">Home</string>
    <string name="vod_type">分类</string>
    <string name="dialog_site_title">Select Site</string>
    <string name="dialog_site_list">Site List</string>
    <string name="dialog_site_line">Select Line</string>
    <string name="dialog_site_source">Select Source</string>
    <string name="dialog_custom_site_name">Site Name</string>
    <string name="dialog_custom_site_api">API Address</string>
    <string name="dialog_custom_site_homepage">HomePage Address</string>
    <string name="dialog_site_type_label">Site Type</string>
    <string name="dialog_site_type_cms">Apple CMS</string>
    <string name="dialog_site_type_webhome">WebHome</string>
    <string-array name="dialog_site_types">
        <item>@string/dialog_site_type_cms</item>
        <item>@string/dialog_site_type_webhome</item>
    </string-array>
    <string name="setting_custom_vod">Custom Site</string>
    <string name="custom_site_list">Custom Site List</string>
    <string name="error_custom_site_empty">Please enter site name and API address</string>
    <string name="custom_site_added">Custom site added</string>
    <string name="custom_site_updated">Custom site updated</string>
    <string name="custom_site_deleted">Custom site deleted</string>
    <string name="custom_site_empty">No custom sites</string>
    <string name="setting_add_custom_site">Add Custom Site</string>
    <string name="setting_add">Add</string>
    <string name="setting_edit">Edit</string>
    <string name="setting_manage_custom_site">Manage Custom Sites</string>
    <string name="setting_edit_custom_site">Edit Custom Site</string>
    <string name="dialog_delete_custom_site_title">Delete Custom Site</string>
    <string name="dialog_delete_custom_site">Delete this custom site?</string>
    <string name="dialog_custom_site_searchable">Searchable</string>
    <string name="dialog_custom_site_quick_search">Quick Search</string>
    <string name="filter">Filter</string>
    <string name="dialog_custom_site_filterable">Filterable</string>
    <string name="dialog_custom_site_style">Cover Style</string>
    <string name="dialog_custom_site_style_rect">Rect</string>
    <string name="dialog_custom_site_style_oval">Oval</string>
    <string name="dialog_custom_site_style_list">List</string>
    <string name="dialog_custom_site_ratio">Cover Ratio</string>
    <string name="custom_site_share">Share Sites</string>
    <string name="custom_site_share_file">Save to Local File</string>
    <string name="custom_site_share_clipboard">Copy to Clipboard</string>
    <string name="custom_site_share_success">Copied to clipboard</string>
    <string name="custom_site_share_fail">Share failed</string>
    <string name="custom_site_import">Import Sites</string>
    <string name="custom_site_import_clipboard">Import from Clipboard</string>
    <string name="custom_site_import_url">Import from URL</string>
    <string name="custom_site_import_file">Import from Local File</string>
    <string name="custom_site_import_url_hint">Enter URL</string>
    <string name="custom_site_import_success">Import succeeded</string>
    <string name="custom_site_import_fail">Import failed, invalid format</string>
    <string name="custom_site_import_empty">Clipboard is empty</string>
    <string name="custom_site_check">Check Site Availability</string>
    <string name="custom_site_checking">Checking site availability…</string>
    <string name="custom_site_check_done">Check done, %1$d available, %2$d unavailable</string>
    <string name="site_list_title">Site List</string>
    <string name="site_list_empty">No sites</string>
    <string name="site_list_load_fail">Load failed</string>
    <string name="line_list_title">Line List</string>
    <string name="line_list_empty">No lines</string>
    <string name="setting_subscribe_manage">Subscription Management</string>
    <string name="subscribe_vod">VOD Subscriptions</string>
    <string name="subscribe_live">Live Subscriptions</string>
    <string name="subscribe_add_vod">Add VOD Subscription</string>
    <string name="subscribe_add_live">Add Live Subscription</string>
    <string name="subscribe_name">Name</string>
    <string name="subscribe_url">Address</string>
    <string name="subscribe_epg">EPG Address</string>
    <string name="subscribe_use">Use this subscription</string>
    <string name="subscribe_selected_line">Selected line: %1$s</string>
    <string name="subscribe_from">From: %1$s</string>
    <string name="subscribe_delete_title">Delete Subscription</string>
    <string name="subscribe_delete">Delete this subscription?</string>
    <string name="subscribe_deleted">Subscription deleted</string>
    <string name="subscribe_added">Subscription added</string>
    <string name="subscribe_file_error">Failed to read file</string>
    <string name="subscribe_empty">No subscriptions yet</string>
    <string name="subscribe_add">Add Subscription</string>
    <string name="subscribe_positive">Add</string>
    <string name="subscribe_menu_more">More options</string>
    <string name="subscribe_menu_edit">Edit</string>
    <string name="subscribe_menu_copy">Copy URL</string>
    <string name="subscribe_menu_delete">Delete</string>
    <string name="subscribe_edit_title">Edit Subscription</string>
    <string name="subscribe_copied">URL copied</string>
    <string name="subscribe_edit_empty">URL cannot be empty</string>
    <string name="subscribe_line_edit_title">Edit Line</string>
    <string name="subscribe_line_name">Line Name</string>
    <string name="subscribe_line_delete_title">Delete Line</string>
    <string name="subscribe_line_delete">Delete this line?</string>
    <string name="subscribe_line_deleted">Line deleted</string>
    <string name="subscribe_line_updated">Line updated</string>
    <string name="detail_flag">Flag</string>
    <string name="detail_poster">Poster</string>
    <string name="detail_more">More</string>
    <string name="detail_download">Download</string>
    <string name="detail_episode">Episode</string>
    <string name="detail_quality">Quality</string>
    <string name="detail_gallery">Stills</string>
    <string name="detail_gallery_all">All %d \u00A0</string>
    <string name="detail_flag_all">All %d</string>
    <string name="detail_director_all">All %d</string>
    <string name="detail_actor_all">All %d</string>
    <string name="gallery_counter">%d / %d</string>
    <string name="gallery_saved">Saved to gallery</string>
    <string name="gallery_save_fail">Save failed</string>
    <string name="mine_title">My Videos</string>
    <string name="mine_mode_edit">Edit</string>
    <string name="mine_add">Add Video</string>
    <string name="mine_delete">Delete</string>
    <string name="mine_export">Export Backup</string>
    <string name="mine_import">Import Backup</string>
    <string name="mine_empty">No videos yet, tap + to add</string>
    <string name="custom_line_add_mode">Custom Line</string>
    <string name="custom_line_remote_mode">Remote Subscribe</string>
</resources>